tests/tvars/tvars.exp
Error ------------------------------------------------------------------------------- fully_resolved_unification.js:16:5

Cannot determine type of empty array literal. Please provide an annotation. [missing-empty-array-annot]

   16| let x = []; // ERROR
           ^


Error ------------------------------------------------------------------------------- fully_resolved_unification.js:20:2

Cannot cast `x` to array type because object type [1] is incompatible with unknown element of empty array [2] in array
element. Arrays are invariantly typed. See
https://flow.org/en/docs/faq/#why-cant-i-pass-an-arraystring-to-a-function-that-takes-an-arraystring-number.
[incompatible-cast]

   fully_resolved_unification.js:20:2
   20| (x: Array<{bar: string}>); // ERROR
        ^

References:
   fully_resolved_unification.js:20:11
   20| (x: Array<{bar: string}>); // ERROR
                 ^^^^^^^^^^^^^ [1]
   fully_resolved_unification.js:16:5
   16| let x = []; // ERROR
           ^ [2]



Found 2 errors
